dev/spring/session-spring/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: session-spring
  labels:
    app: session-spring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: session-spring
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: session-spring
    spec:
      containers:
      - name: session-spring
        image: htdp1/session-spring:v3
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          name: tomcat
        volumeMounts: 
        - name: application-properties
          mountPath: "/config"
          readOnly: true
        resources:
          limits:
            cpu: 1000m
            memory: 512Mi
          requests:
            cpu: 300m
            memory: 256Mi
        livenessProbe:
          httpGet:
            path: /session-spring/actuator/health
            port: tomcat
          initialDelaySeconds: 5
          periodSeconds: 60
        readinessProbe:
          httpGet:
            path: /session-spring/actuator/health
            port: tomcat
          initialDelaySeconds: 30
          periodSeconds: 5
      volumes:
      - name: application-properties
        configMap:
          name: session-spring
          items:
          - key: application.yml
            path: application.yml
          - key: application-redis.yml
            path: application-redis.yml
          - key: application-apis.yml
            path: application-apis.yml
