dev/spring/session-spring/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: session-spring
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: tomcat
  selector:
    app: session-spring
